<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:kitsocard="http://schemas.android.com/apk/res-auto"
    tools:context="me.roberto.kitso.ui.WalletFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/wallet"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <me.roberto.kitso.kitsocard.KitsoCard
        tools:layout_width="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        android:id="@+id/bitso_mxn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="141dp"
        android:layout_width="match_parent"
        kitsocard:top_title="@string/balance_peso_mxn"
        kitsocard:amount="0.00"
        kitsocard:bottom_title="@string/mexican_peso_mxn"
        tools:layout_editor_absoluteY="64dp" />

    <me.roberto.kitso.kitsocard.KitsoCard

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/bitso_btc"
        tools:layout_width="match_parent"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bitso_mxn"
        kitsocard:top_title="@string/balance_btc"
        kitsocard:amount="0.00"
        kitsocard:bottom_title="@string/bitcoin_btc"
        tools:layout_editor_absoluteY="213dp" />

    <me.roberto.kitso.kitsocard.KitsoCard

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/bitso_eth"
        tools:layout_width="match_parent"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bitso_btc"
        kitsocard:top_title="@string/balance_ether"
        kitsocard:amount="0.00"
        kitsocard:bottom_title="@string/ether_eth"
        tools:layout_editor_absoluteY="362dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
