<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="me.roberto.kitso.MarketFragment" android:layout_height="match_parent" android:layout_width="match_parent"
    android:id="@+id/refresh">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Spinner

                android:id="@+id/spinner"
                style="@style/appSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" />




            <Switch
                android:id="@+id/refresh_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/auto_refresh"
                app:layout_constraintEnd_toEndOf="parent" />


        </android.support.v7.widget.Toolbar>


        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

            <include layout="@layout/price_layout" />

        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:textSize="10sp"
                        android:id="@+id/linear_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linear"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:textSize="10sp"
                        android:id="@+id/candlestick_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/candle"
                        app:layout_constraintStart_toEndOf="@+id/linear_radio"
                        app:layout_constraintTop_toTopOf="parent" />
                </RadioGroup>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/linear_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    />

                <com.github.mikephil.charting.charts.CandleStickChart
                    android:id="@+id/candle_chart"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"
                    />

            </LinearLayout>




                <!--<RadioGroup-->
                    <!--android:id="@+id/radioGroup"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="8dp"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:visibility="gone"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintTop_toTopOf="parent">-->

                    <!--<RadioButton-->
                        <!--android:id="@+id/year_radio"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="8dp"-->
                        <!--android:text="@string/seven_days"-->
                        <!--app:layout_constraintStart_toStartOf="parent"-->
                        <!--app:layout_constraintTop_toTopOf="parent" />-->

                    <!--<RadioButton-->
                        <!--android:id="@+id/month_radio"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginStart="8dp"-->
                        <!--android:layout_marginTop="8dp"-->
                        <!--android:checked="true"-->
                        <!--android:text="@string/one_month"-->
                        <!--app:layout_constraintStart_toEndOf="@+id/year_radio"-->
                        <!--app:layout_constraintTop_toTopOf="parent" />-->
                <!--</RadioGroup>-->


            <!--</android.support.constraint.ConstraintLayout>-->

        </android.support.v7.widget.CardView>

        <ProgressBar

            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

    </LinearLayout>



</android.support.v4.widget.SwipeRefreshLayout>
